# lidarscout

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  cmake_build_debug.bat  cmake_build_release.bat  ipes_cnn.pt
ICP/: .gitignore  CMakeLists.txt  README.md
ICP/example/: icp_bench.cpp
ICP/include/: instant_chunk_points.h
ICP/src/: AlignedByteBufferPool.cpp  ChunkPointLoader.cpp  LasHeader.cpp  instant_chunk_points.cpp  utils.cpp
ICP/src/common/: AlignedByteBufferPool.h  ChunkPointLoaderImpl.h  LasFile.h  LasHeader.h  PointLoaderJob.h  ReadRequestType.h  SharedWorkQueue.h  SparsePointLoader.h  UnbufferedFile.h  utils.h
ICP/src/linux/: AsyncPointLoader.cpp  AsyncPointLoader.h  SparsePointLoader.cpp
ICP/src/windows/ioring/: AsyncPointLoader.cpp  AsyncPointLoader.h  SparsePointLoader.cpp
ICP/src/windows/readfileex/: AsyncPointLoader.cpp  AsyncPointLoader.h  SparsePointLoader.cpp
doodles/: interpolate_splatting.mjs
doodles/pipeline/: ca_13_220_230_b4_pts_ms.ascii.ply  ca_13_220_230_b4_pts_ms.ply  load_points.py  pipeline.blend  voxelization.py
heightmap_interp/: .gitmodules  CMakeLists.txt  LICENSE  README.md
heightmap_interp/example/: heightmap_interp.cpp
heightmap_interp/include/: pc2hm.h  pc2hm_dl.h
heightmap_interp/src/: pc2hm.cpp  pc2hm_dl.cpp
include/: ArithmeticModel.h  CURuntime.h  CudaModularProgram.h  CudaVirtualMemory.h  GLRenderer.h  ObjLoader.h  OrbitControls.h  Runtime.h  unsuck.hpp  unsuck_platform_specific.cpp  utils.h
libs/imgui/: imgui_internal.h  imgui_widgets.cpp
modules/icp2/: ArithmeticDecoder.h  CMakeLists.txt  ChunkPointReader2.cpp  IntegerCompressor.h  utils_hd.h
modules/progressive_octree/: CameraPaths.h  ChunkPointLoader.cpp  ChunkPointLoader.h  HeightmapGenerator.h  HostDeviceInterface.h  HostDeviceInterface_triangles.h  LasLoader.cpp  LasLoader.h  SimlodLoader.cpp  SimlodLoader.h  helper_math.h  main_progressive_octree.cpp  math.cuh  rasterization.cuh  render.cu  structures.cuh  triangles.cu  triangles.cuh  tween.h  utilities.cu  utils.cu  utils.cuh
modules/progressive_octree/gui/: cameraPaths.h  gui.h  memory.h  toolbar.h
src/: GLRenderer.cpp  main.cpp
tools/: heightmap_filter.mjs  las_heightmap.mjs  las_tile_data.mjs  meshify.py
